<resources>
    <string name="app_name">SIBIPEDIAV2</string>
    <string name="hello">Hello, %1$s</string>
    <string name="welcome_text_1">Selamat datang di SIBISA,</string>
    <string name="welcome_text_2">pintu Anda ke dunia bahasa isyarat Indonesia. Mulai jelajahi sekarang!</string>
    <string name="kamus_text_1">Kamus SIBI</string>
    <string name="kamus_text_2">Pelajari alfabet SIBI dan kosakata umum di sini. Latih juga gestur alfabetik Anda!</string>
    <string name="dictionary_desc">dictionary_pic</string>
    <string name="quiz_text_1">Quiz SIBI</string>
    <string name="quiz_text_2">Setelah mempelajari kata-kata dalam SIBI, uji kemampuan Anda dengan quiz!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alphabet_image">alphabet image</string>
    <string name="back">Back</string>
    <string name="alphabet">Alfabet</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="Kamus_SIBI">Kamus SIBI</string>
    <string name="alphabet_text_2">Pelajari alfabet SIBI dan coba latih gestur alfabet dengan fitur kamera!</string>
    <string name="vocab_text_2">Pelajari kosakata SIBI yang sering digunakan sehari-hari!</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_account">Already have account?</string>
    <string name="latihan_gestur">Latihan Gestur</string>
    <string name="latihan_gestur_desc">Latihlah gestur anda dengan menekan tombol diatas</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_image">Profile Image</string>
    <string name="Buttonlogout">Logout</string>
    <string name="hint_phone_number">Phone number (must start with +62)</string>
    <string name="image_classifier_failed">Classifier failed</string>
    <string name="kosa_kata">Kosa Kata</string>
    <string name="quiz_image_description">quiz description</string>
    <string name="quiz_desc">Anda akan diberikan serangkaian pertanyaan pilihan ganda untuk menguji pemahaman Anda tentang bahasa isyarat SIBI. Jawablah dengan teliti untuk melihat seberapa jauh Anda telah menguasai materi yang telah disajikan. Mari kita mulai!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="your_score">%d</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="question_number">"Question %d"</string>
    <string name="submit">SELESAI</string>
    <string name="selanjutnya">SELANJUTNYA</string>
    <string name="score_image">score icon</string>
    <string name="congratulations_message">Selamat! Anda berhasil mendapatkan nilai</string>
    <string name="save_result">Simpan Hasil</string>
    <string name="hasil">Skor</string>
</resources>