<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lavender"
        app:titleTextColor="@color/palatinate_blue"
        />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back">

    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/hasil"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/palatinate_blue" />

    <!-- Content -->
    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/score_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/img_2"
            android:contentDescription="@string/score_image"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/score_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations_message"
            android:textColor="@color/palatinate_blue"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

</RelativeLayout>
