<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="50dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/hello"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileImage"
        app:layout_constraintHorizontal_bias="0"/>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeText"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/welcomeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#4285F4"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_text_1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_text_2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="82dp"
                android:gravity="center"
                android:src="@drawable/img_1" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dictionaryCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#D96E9A"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kamus_text_1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kamus_text_2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="82dp"
                android:contentDescription="@string/dictionary_desc"
                android:gravity="center"
                android:src="@drawable/dictionary_img" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/quizCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#25BAA7"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/dictionaryCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_text_1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_text_2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="82dp"
                android:contentDescription="@string/quiz_text_2"
                android:gravity="center"
                android:src="@drawable/img" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
