<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lavender"
        app:titleTextColor="@color/palatinate_blue"
        />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back">

    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/quiz_text_1"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/palatinate_blue" />

    <!-- Description Container -->
    <LinearLayout
        android:id="@+id/descriptionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_background"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/img"
            android:contentDescription="@string/quiz_image_description" />

        <!-- Description Text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quiz_desc"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Start Quiz Button -->
    <Button
        android:id="@+id/startQuizButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionContainer"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="MULAI QUIZ"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF1949D8"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>
