<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kamus.AlphabetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Kamus SIBI"
        app:titleTextColor="@color/palatinate_blue" />

    <androidx.cardview.widget.CardView
        android:id="@+id/alphabetCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#4285F4"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alphabet"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alphabet_text_2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

<!--            <ImageView-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="82dp"-->
<!--                android:gravity="center"-->
<!--                android:src="@drawable/alphabet_img" />-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vocabularyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alphabetCard"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#4285F4"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocabulary"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocab_text_2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

<!--            <ImageView-->
<!--                android:layout_width="64dp"-->
<!--                android:layout_height="82dp"-->
<!--                android:contentDescription="@string/dictionary_desc"-->
<!--                android:gravity="center"-->
<!--                android:src="@drawable/dictionary_img" />-->
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
